# tan-toolchain

./: .gitignore  .tan-history.txt  Cargo.toml  README.md  history.txt  input.tan
src/: cmd.rs  format.rs  lint.rs  main.rs  repl.rs  run.rs  test.rs  util.rs
src/cmd/: deps.rs  format.rs  lint.rs  new.rs  repl.rs  run.rs  test.rs
src/util/: ansi.rs  canonicalize.rs  eval.rs  fmt.rs  fs.rs  prelude.rs  report.rs
tests/fixtures/test-fixture/: a.test.tan  pass.test.tan  readme.text  util.tan
tests/fixtures/test-fixture/dir/: b.test.tan  fail.test.tan
