[package]
name = "tan-toolchain"
description = "CLI tools for the Tan Language"
version = "0.16.0"
license = "Apache-2.0"
repository = "https://github.com/tanlang-org/tan-toolchain"
keywords = ["tan", "language", "toolchain", "cli"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "4"
rustyline = "14.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
glob = "0.3.1"
tan = { path = "../tan", version = "0.16" }
# #todo Move to top-level tan-core, or tan-core-lib dir.
lib-tan-core = { path = "../tan-libs/crates/lib-tan-core", version = "0.16" }
tan-analysis = { path = "../tan-analysis", version = "0.16" }
tan-formatting = { path = "../tan-formatting", version = "0.16" }
tan-lints = { path = "../tan-lints", version = "0.16" }

[[bin]]
name = "tan"
path = "src/main.rs"
